@@ -10,6 +10,8 @@ import com.example.librarymanagement.mapper.AuthorMapper;
 import com.example.librarymanagement.mapper.BookMapper;
 import com.example.librarymanagement.repository.AuthorRepository;
 import com.example.librarymanagement.repository.BookRepository;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,6 +21,8 @@ import java.util.stream.Collectors;
 
 @Service
 public class AuthorService {
+
+    private static final Logger log = LoggerFactory.getLogger(AuthorService.class);
 
     private final AuthorRepository authorRepository;
     private final BookRepository bookRepository;
@@ -37,24 +41,32 @@ public class AuthorService {
     }
 
     public AuthorDto createAuthor(AuthorDto authorDto) {
+        log.info("Создание нового автора: {}", authorDto.getName());
         Author author = authorMapper.toEntity(authorDto);
         Author savedAuthor = authorRepository.save(author);
+        log.info("Автор создан с id: {}", savedAuthor.getId());
         return authorMapper.toDto(savedAuthor);
     }
 
     public List<AuthorDto> getAllAuthors() {
+        log.debug("Получение всех авторов");
         return authorRepository.findAll().stream()
                 .map(authorMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public AuthorDto getAuthorById(Long id) {
+        log.debug("Поиск автора по id: {}", id);
         return authorRepository.findById(id)
                 .map(authorMapper::toDto)
-                .orElseThrow(() -> new ResourceNotFoundException("Автор не найден с id: " + id));
+                .orElseThrow(() -> {
+                    log.warn("Автор не найден с id: {}", id);
+                    return new ResourceNotFoundException("Автор не найден с id: " + id);
+                });
     }
 
     public AuthorDto updateAuthor(Long id, AuthorDto authorDto) {
+        log.info("Обновление автора с id: {}", id);
         return authorRepository.findById(id)
                 .map(existingAuthor -> {
                     existingAuthor.setName(authorDto.getName());
@@ -62,51 +74,54 @@ public class AuthorService {
                     existingAuthor.setBirthCountry(authorDto.getBirthCountry());
                     existingAuthor.setBiography(authorDto.getBiography());
                     Author updatedAuthor = authorRepository.save(existingAuthor);
+                    log.info("Автор с id: {} обновлён", id);
                     return authorMapper.toDto(updatedAuthor);
                 })
-                .orElseThrow(() -> new ResourceNotFoundException("Автор не найден с id: " + id));
+                .orElseThrow(() -> {
+                    log.warn("Автор не найден для обновления с id: {}", id);
+                    return new ResourceNotFoundException("Автор не найден с id: " + id);
+                });
     }
 
     public boolean deleteAuthor(Long id) {
+        log.info("Удаление автора с id: {}", id);
         if (authorRepository.existsById(id)) {
             authorRepository.deleteById(id);
+            log.info("Автор с id: {} удалён", id);
             return true;
         }
+        log.warn("Автор не найден для удаления с id: {}", id);
         return false;
     }
 
-    public void saveAuthorWithBooksWithoutTransaction(AuthorWithBooksDto dto) {
+    private void saveAuthorWithBooks(AuthorWithBooksDto dto) {
         Author author = authorMapper.toEntity(dto.getAuthor());
         Author savedAuthor = authorRepository.save(author);
-        System.out.println("Автор сохранен: " + savedAuthor.getId());
+        log.info("Автор сохранен: {}", savedAuthor.getId());
 
         for (BookDto bookDto : dto.getBooks()) {
             bookDto.setAuthorId(savedAuthor.getId());
             Book book = bookMapper.toEntity(bookDto);
             bookRepository.save(book);
-            System.out.println("Книга сохранена: " + book.getTitle());
+            log.info("Книга сохранена: {}", book.getTitle());
 
             if (book.getTitle().contains("Ошибка")) {
+                log.error("Ошибка при сохранении книги: {}", book.getTitle());
                 throw new RuntimeException("Ошибка при сохранении книги!");
             }
         }
+        log.info("Все книги сохранены успешно");
+    }
+
+    public void saveAuthorWithBooksWithoutTransaction(AuthorWithBooksDto dto) {
+        log.info("Сохранение автора с книгами (без транзакции)");
+        saveAuthorWithBooks(dto);
     }
 
     @Transactional
     public void saveAuthorWithBooksWithTransaction(AuthorWithBooksDto dto) {
-        Author author = authorMapper.toEntity(dto.getAuthor());
-        Author savedAuthor = authorRepository.save(author);
-        System.out.println("Автор сохранен: " + savedAuthor.getId());
-
-        for (BookDto bookDto : dto.getBooks()) {
-            bookDto.setAuthorId(savedAuthor.getId());
-            Book book = bookMapper.toEntity(bookDto);
-            bookRepository.save(book);
-            System.out.println("Книга сохранена: " + book.getTitle());
-
-            if (book.getTitle().contains("Ошибка")) {
-                throw new RuntimeException("Ошибка при сохранении книги!");
-            }
-        }
+        log.info("Сохранение автора с книгами (с транзакцией)");
+        saveAuthorWithBooks(dto);
+        log.info("Транзакция зафиксирована");
     }
 }
